Add suthentication and authorization with JWT for API.

--- a/MagicVilla_API/appsettings.json
+++ b/MagicVilla_API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=LAPTOP-IFPG73AJ; Database=MagicVilla; Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "My name is Samaira Rahman, I read in class one in solaiman kinder garden"
   }
-}
+ }
